[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael",email = "r_paim@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.124.0,<0.125.0)",
    "gh (>=0.0.4,<0.0.5)",
    "ruff (>=0.14.8,<0.15.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
]

[tool.poetry]
packages = [{include = "", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev ./src/app.py'

pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff' 
format = 'ruff check . --fix ; ruff format .'